--- a/SilentRats-Project-WebSite/HomePage.html
+++ b/SilentRats-Project-WebSite/HomePage.html
@@ -16,6 +16,11 @@
   </head>
 
   <body>
+    <div class="menu">
+      <div class="menuItems">
+        <button class="menuButton">Menu</button>
+      </div>
+    </div>
     <main class="mainOverview">
       <section class="frontView">
         <div class="titlesContainer">
