--- a/SilentRats-Project-WebSite/HomePage.html
+++ b/SilentRats-Project-WebSite/HomePage.html
@@ -80,28 +80,16 @@
         </div>
         <div class="Gallery-Container">
           <div class="gallery">
-            <img
-              class="galleryItem"
-              src="C:\Users\Admin\Desktop\private\VisualCodeStudio-projects\StronaInternetowa-projektcs\zdj-robocze\dews 6.png"
-            />
+            <img class="galleryItem" src="zdj-robocze\dews 6.png" />
           </div>
           <div class="gallery">
-            <img
-              class="galleryItem"
-              src="C:\Users\Admin\Desktop\private\VisualCodeStudio-projects\StronaInternetowa-projektcs\zdj-robocze\dews 6.png"
-            />
+            <img class="galleryItem" src="zdj-robocze\dews 6.png" />
           </div>
           <div class="gallery">
-            <img
-              class="galleryItem"
-              src="C:\Users\Admin\Desktop\private\VisualCodeStudio-projects\StronaInternetowa-projektcs\zdj-robocze\dews 6.png"
-            />
+            <img class="galleryItem" src="zdj-robocze\dews 6.png" />
           </div>
           <div class="gallery">
-            <img
-              class="galleryItem"
-              src="C:\Users\Admin\Desktop\private\VisualCodeStudio-projects\StronaInternetowa-projektcs\zdj-robocze\dews 6.png"
-            />
+            <img class="galleryItem" src="zdj-robocze\dews 6.png" />
           </div>
         </div>
       </section>
